--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="red">#e10b12</color>
+    <color name="blue">#1d2fd2</color>
+    <color name="green">#14e92d</color>
+
+    <array name="boardColors">
+        <item>@color/red</item>
+        <item>@color/blue</item>
+        <item>@color/green</item>
+    </array>
+
 </resources>
