--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.gmsk.floodcolor.MainActivity">
+    tools:context="com.example.gmsk.floodcolor.MainActivity"
+    android:weightSum="6">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -19,13 +21,15 @@
 
     <com.example.gmsk.floodcolor.BoardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:layout_weight="4"/>
     <LinearLayout
         android:id="@+id/buttonsDisplay"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
     </LinearLayout>
 
 </LinearLayout>
