--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,15 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
+        android:layout_gravity="center"
         android:layout_weight="4"/>
+
     <LinearLayout
         android:id="@+id/buttonsDisplay"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
+        android:gravity="center"
         android:layout_weight="1">
     </LinearLayout>
 
