--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,14 @@
     <color name="red">#e10b12</color>
     <color name="blue">#1d2fd2</color>
     <color name="green">#14e92d</color>
+    <color name="pink">#f406bc</color>
+
 
     <array name="boardColors">
         <item>@color/red</item>
         <item>@color/blue</item>
         <item>@color/green</item>
+        <item>@color/pink</item>
     </array>
 
 </resources>
