--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,13 @@
     </LinearLayout>
 
     <com.example.gmsk.floodcolor.BoardView
+        android:id="@+id/boardLayout"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
         android:layout_gravity="center"
-        android:layout_weight="4"/>
+        android:layout_weight="4"
+        android:background="@color/grey"/>
 
     <LinearLayout
         android:id="@+id/buttonsDisplay"
