--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,8 @@
 
     <com.example.gmsk.floodcolor.BoardView
         android:id="@+id/boardLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center"
-        android:layout_gravity="center"
         android:layout_weight="4"
         android:background="@color/grey"/>
 
