--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,16 +6,20 @@
 
     <color name="red">#e10b12</color>
     <color name="blue">#1d2fd2</color>
+    <color name="sky">#06bcf4</color>
     <color name="green">#14e92d</color>
     <color name="pink">#f406bc</color>
+    <color name="yellow">#e8f406</color>
     <color name="grey">#a1949e</color>
 
 
     <array name="boardColors">
         <item>@color/red</item>
         <item>@color/blue</item>
+        <item>@color/sky</item>
         <item>@color/green</item>
         <item>@color/pink</item>
+        <item>@color/yellow</item>
     </array>
 
 </resources>
