--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,23 +15,21 @@
         android:layout_weight="1">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:text="TEXT"/>
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
     <com.example.gmsk.floodcolor.BoardView
         android:id="@+id/boardLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
-        android:background="@color/grey"/>
+        android:layout_weight="4"/>
 
     <LinearLayout
         android:id="@+id/buttonsDisplay"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="5dp"
         android:orientation="horizontal"
+        android:paddingBottom="10dp"
         android:gravity="center"
         android:layout_weight="1">
     </LinearLayout>
