--- a/app/src/main/res/layout/end_choice_layout.xml
+++ b/app/src/main/res/layout/end_choice_layout.xml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:orientation="vertical">
+    android:layout_width="300dp"
+    android:layout_height="150dp"
+    android:orientation="vertical"
+    android:background="@drawable/dialog_background">
 
     <TextView
         android:id="@+id/text"
+        android:background="@drawable/dialog_title_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_gravity="center"
-        android:textColor="@color/blue"
+        android:gravity="center"
+        android:textColor="#ffffff"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:weightSum="2">
 
         <Button
             android:id="@+id/buttonReplay"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/replay"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_background"
             />
         <Button
             android:id="@+id/buttonNext"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/next"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_background"
             />
     </LinearLayout>
 
